Site remodelling in progress

--- a/web/HTML/Hello, World!/helloworld.html
+++ b/web/HTML/Hello, World!/helloworld.html
@@ -14,7 +14,7 @@
 
 <h2>example img</h2>
 <br>
-<img src="https://cdn.vox-cdn.com/thumbor/Ous3VQj1sn4tvb3H13rIu8eGoZs=/0x0:2012x1341/1400x788/filters:focal(0x0:2012x1341):format(jpeg)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" width="900" height="500">
+<img src="https://cdn.vox-cdn.com/thumbor/Ous3VQj1sn4tvb3H13rIu8eGoZs=/0x0:2012x1341/1400x788/filters:focal(0x0:2012x1341):format(jpeg)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" width="900" height="500" alt="Google Logo">
 
 <br>
 <br>
@@ -25,4 +25,4 @@
   </video>
   
 
-  <a href="https://www.gooogle.com/">Google</a>
+  <a href="https://www.google.com/">Google</a>
